--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deployGitPage": "ng deploy --repo=https://github.com/Kurarion/GSCal.git --base-href=/GSCal/ --branch=website"
   },
   "private": true,
   "dependencies": {
