--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "generateGenshinData": "go run GenshinData",
     "deployGitPage": "ng deploy --repo=https://github.com/Kurarion/GSCal.git --base-href=/GSCal/ --branch=website"
   },
   "private": true,
