--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "copy-image-clipboard": "^2.1.2",
     "html2canvas": "^1.4.1",
     "image-js": "^0.34.0",
+    "magic-grid": "^3.2.4",
     "material-icons": "^1.10.9",
     "ngx-cookie-service": "^13.2.0",
     "rxjs": "~7.5.0",
