--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gscal",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -22,18 +22,13 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@angular/service-worker": "~13.3.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "copy-image-clipboard": "^2.1.2",
-    "html2canvas": "^1.4.1",
-    "image-js": "^0.34.0",
     "magic-grid": "^3.2.4",
     "material-icons": "^1.10.9",
-    "ngx-cookie-service": "^13.2.0",
     "rxjs": "~7.5.0",
-    "tesseract.js": "^2.1.5",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.3.4",
@@ -42,6 +37,7 @@
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.20.50",
     "angular-cli-ghpages": "^1.0.0",
+    "http-server": "^14.1.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
