--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -16,13 +16,51 @@
       }
     },
     {
-      "name": "assets",
-      "installMode": "prefetch",
+      "name": "icons",
+      "installMode": "lazy",
       "resources": {
         "files": [
-          "/assets/**",
+          "/assets/icons/**/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)",
+          "/assets/init/homePageBG.png",
+          "/assets/init/homePageBG-compress.png",
           "/*.(svg|cur|jpg|jpeg|png|apng|webp|avif|gif|otf|ttf|woff|woff2)"
         ]
+      }
+    }
+  ],
+  "dataGroups": [
+    {
+      "name": "game-data",
+      "version": 32,
+      "urls": [
+          "/assets/genshin/avatar_map.json",
+          "/assets/genshin/monster_map.json",
+          "/assets/genshin/reliquary_affix_map.json",
+          "/assets/genshin/reliquary_main_map.json",
+          "/assets/genshin/reliquary_set_map.json",
+          "/assets/genshin/weapon_map.json"
+      ],
+      "cacheConfig": {
+        "maxSize": 6,
+        "maxAge": "30d",
+        "strategy": "performance"
+      }
+    },
+    {
+      "name": "setting-data",
+      "version": 3201,
+      "urls": [
+          "/assets/init/data.json",
+          "/assets/i18n/cn_sim.json",
+          "/assets/i18n/cn_tra.json",
+          "/assets/i18n/en.json",
+          "/assets/i18n/jp.json",
+          "/assets/init/chip.json"
+      ],
+      "cacheConfig": {
+        "maxSize": 6,
+        "maxAge": "30d",
+        "strategy": "performance"
       }
     }
   ]
